Use getLast and removeLast instead of size() - 1 indexing
Java 21 sequenced collections name the intent directly. All call sites
either guard against an empty list or already assumed a non-empty one.